--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -16,6 +19,84 @@
 
 <body>
 
+  <!-- intestazione pagina -->
+  <header>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 my-3 text-center">
+          <h1><strong>ESTATE '24</strong></h1>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- corpo della pagina -->
+  <main>
+    <div class="container">
+      <div class="row gy-4 pt-4">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card rounded-0 position-relative">
+            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
+            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
+            <div class="card-body">
+              <p class="card-text"></p>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card rounded-0 position-relative">
+            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
+            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
+            <div class="card-body">
+              <p class="card-text"></p>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card rounded-0 position-relative">
+            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
+            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
+            <div class="card-body">
+              <p class="card-text"></p>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card rounded-0 position-relative">
+            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
+            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
+            <div class="card-body">
+              <p class="card-text"></p>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card rounded-0 position-relative">
+            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
+            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
+            <div class="card-body">
+              <p class="card-text"></p>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card rounded-0 position-relative">
+            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
+            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
+            <div class="card-body">
+              <p class="card-text"></p>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
