--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 my-3 text-center">
+        <div class="col-12 my-4 text-center">
           <h1><strong>ESTATE '24</strong></h1>
         </div>
       </div>
@@ -33,70 +33,10 @@
   <!-- corpo della pagina -->
   <main>
     <div class="container">
-      <div class="row gy-4 pt-4">
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card rounded-0 position-relative">
-            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
-            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
-            <div class="card-body">
-              <p class="card-text"></p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card rounded-0 position-relative">
-            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
-            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
-            <div class="card-body">
-              <p class="card-text"></p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card rounded-0 position-relative">
-            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
-            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
-            <div class="card-body">
-              <p class="card-text"></p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card rounded-0 position-relative">
-            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
-            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
-            <div class="card-body">
-              <p class="card-text"></p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card rounded-0 position-relative">
-            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
-            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
-            <div class="card-body">
-              <p class="card-text"></p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card rounded-0 position-relative">
-            <div class="position-absolute top-0 start-50 translate-middle"><img src="./assets/img/pin.svg" alt=""></div>
-            <img src="./assets/img/031.JPG" class="card-img-top rounded-0 myPadding img-fluid square-image" alt="...">
-            <div class="card-body">
-              <p class="card-text"></p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="img-list" class="row gy-4 py-5"></div>
     </div>
   </main>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
