--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </header>
 
-  <!-- corpo della pagina -->
+  <!-- corpo pagina -->
   <main>
     <div class="container">
       <div id="img-list" class="row gy-4 py-5"></div>
