--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
 <body>
 
+  <div class="overlay">
+    <img src="./assets/img/031.JPG" alt="" class="center-img">
+    <button type="button" id="close" class="btn btn-success mt-3">CHIUDI</button>
+  </div>
+
   <!-- intestazione pagina -->
   <header>
     <div class="container-fluid">
