--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <body>
 
-  <div class="overlay">
+  <div class="overlay d-none">
     <img src="./assets/img/031.JPG" alt="" class="center-img">
-    <button type="button" id="close" class="btn btn-success mt-3">CHIUDI</button>
+    <button type="button" id="close" class="btn btn-success mt-4">CHIUDI</button>
   </div>
 
   <!-- intestazione pagina -->
