--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <div class="overlay d-none">
-    <img src="./assets/img/031.JPG" alt="" class="center-img">
+    <img src="./assets/img/031.JPG" id="new-img" alt="" class="center-img">
     <button type="button" id="close" class="btn btn-success mt-4">CHIUDI</button>
   </div>
 
