--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+  <!-- overlay al click delle foto -->
   <div class="overlay d-none">
     <img src="./assets/img/031.JPG" id="new-img" alt="" class="center-img">
     <button type="button" id="close" class="btn btn-success mt-4">CHIUDI</button>
@@ -45,6 +45,7 @@
       <div id="img-list" class="row gy-4 py-5"></div>
     </div>
   </main>
+
   <script src="./assets/js/script.js"></script>
 </body>
 
